# url-shortener

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.MD  README.md  Shuttle.toml  docker-compose.yml
.sqlx/: query-00e648f51c7e79fb7aead00f48f4bdd97a74ea5673c25e8a4351fac70c8cfd7a.json  query-076cb66d065711d4e2480ef68db55ca5acf8f2ee68bf57408bb9c3f834c16456.json  query-1b1c08904e7fb10898e080decc48de231d7a473154793c701eb45f9f5a353157.json  query-2111e0b88a5cb07f7750b9a6ba7bdd2eb09bbcd7cb364dbe8e5958389463e620.json  query-24a40d235864c38fb4e05f0b9c6143e72bc4833a9d1ed8ccf8510d20ecaad8c9.json  query-35d3b06b883d297a8d2f6df6aa7a9de464766fa6455528379325c306f547a6c7.json  query-38949d5535e964df32b6bc753fcb93c464d17fecbb0489dbb9abf3f8fd7c0ce8.json  query-48df5154072a8eae188eeecc0a73765342d5b7d8c93a0a96753dc7d3e6143c5c.json  query-56de4cabc7bba1791335906be5679ca6059fb51d9bc1d739e6f4a02b21fc2031.json  query-5e1cc12e64dcb573aff287d83ff0d30abecca58d829c61d015d4a2e1a79a78ce.json  query-6f2d1bda8f5cbc30b975bd12035f51dbe3113416d56ecdcf33241aeef4b57890.json  query-715d581090ad80764fbf9ef8ad7b7f6b70c03d9c30842ba027361f30709aa306.json  query-7bfe9f1981878e8d1907e041e8b23954826d0a968f98733c38677090128a12e0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9d964754b41d601e58e7926ebd1a3e3cd678f358b0c8a5c38cd7521e77d76e46.json  query-b1c8659e5d8848fbbdc80b9e04e87fa76b5e3b9cbba6dffd74ea8be0a59293b5.json  query-dd8cd00d8f68fd41f6d88e4a737c1107e1fa56c565bfcb45f0947e2fd0091832.json  query-e8d89b92b4ce3735a09b6231e8946f1fe25c50b55331595960e537faa15fed20.json  (+1 more)
extension/: Cargo.toml  index.html
extension/src/: lib.rs  utils.rs
extension/www/: index.html
no/: Cargo.toml
src/: lib.rs  (+6 more)
(+19 files in other folders)
