[package]
#[warn(non_snake_case)]
name = "url_shortener_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
actix-cors = "0.6.4"
cargo-modules = "0.13.5"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
argon2 = "0.5.0"
base64 = "0.21.0"
futures = "0.3.26"
jsonwebtoken = "8.2.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.6"
shuttle-actix-web = "0.38.0"
shuttle-runtime = {version = "0.38.0", default-features = false}
shuttle-secrets = "0.38"

